# camp2026

./: pyproject.toml  test.robot  test2.robot
CardX_assignment/keywords/: common.robot
CardX_assignment/keywords/features/: home_page_feature.robot
CardX_assignment/keywords/pages/: home_page_page.robot
CardX_assignment/testcases/: TC-001.robot  TC-002.robot
pageobject2/: interactive_console_output.xml  pyproject.toml  report.html
pageobject2/keywords/: import.robot
pageobject2/keywords/features/: loan_evaluation_feature.robot
pageobject2/keywords/pages/: loan_evaluation_page.robot
pageobject2/resources/locators/: home_locator.robot  loan_evaluation_locator.robot
pageobject2/resources/settings/: setting.robot
pageobject2/resources/testdata/: loan_evaluation_test_data.yaml
pageobject2/testcases/: TC-001.robot  TC-002.robot  report.html
